Remove seoSummary and summary classes from SVG

--- a/files/en-us/web/svg/attribute/by/index.html
+++ b/files/en-us/web/svg/attribute/by/index.html
@@ -8,7 +8,7 @@ browser-compat: svg.elements.animate.by
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <code><strong>by</strong></code> attribute specifies a relative offset value for an attribute that will be modified during an animation.</span></p>
+<p>The <code><strong>by</strong></code> attribute specifies a relative offset value for an attribute that will be modified during an animation.</p>
 
 <p>The starting value for the attribute is either indicated by specifying it as value for the attribute given in the {{SVGAttr("attributeName")}} or the {{SVGAttr("from")}} attribute.</p>
 
