--- a/files/en-us/web/svg/attribute/color-interpolation/index.html
+++ b/files/en-us/web/svg/attribute/color-interpolation/index.html
@@ -9,7 +9,7 @@ browser-compat: svg.attributes.presentation.color-interpolation
 ---
 <div>{{SVGRef}}</div>
 
-<p class="seoSummary">The <strong><code>color-interpolation</code></strong> attribute specifies the color space for gradient interpolations, color animations, and alpha compositing.</p>
+<p>The <strong><code>color-interpolation</code></strong> attribute specifies the color space for gradient interpolations, color animations, and alpha compositing.</p>
 
 <div class="notecard note">
 <p><strong>Note:</strong> For filter effects, the {{SVGAttr("color-interpolation-filters")}} property controls which color space is used.</p>
