--- a/files/en-us/web/svg/attribute/divisor/index.html
+++ b/files/en-us/web/svg/attribute/divisor/index.html
@@ -9,7 +9,9 @@ browser-compat: svg.elements.feConvolveMatrix.divisor
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <strong><code>divisor</code></strong> attribute specifies the value by which the resulting number of applying the {{SVGAttr("kernelMatrix")}} of a {{SVGElement("feConvolveMatrix")}} element to the input image color value is divided to yield the destination color value.</span> A divisor that is the sum of all the matrix values tends to have an evening effect on the overall color intensity of the result.</p>
+<p>The <strong><code>divisor</code></strong> attribute specifies the value by which the resulting number of applying the {{SVGAttr("kernelMatrix")}} of a {{SVGElement("feConvolveMatrix")}} element to the input image color value is divided to yield the destination color value.</p>
+
+<p>A divisor that is the sum of all the matrix values tends to have an evening effect on the overall color intensity of the result.</p>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
