--- a/files/en-us/web/svg/attribute/keytimes/index.html
+++ b/files/en-us/web/svg/attribute/keytimes/index.html
@@ -8,7 +8,9 @@ browser-compat: svg.elements.animate.keyTimes
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <strong><code>keyTimes</code></strong> attribute represents a list of time values used to control the pacing of the animation. Each time in the list corresponds to a value in the {{SVGAttr("values")}} attribute list, and defines when the value is used in the animation.</span> Each time value in the <code>keyTimes</code> list is specified as a floating point value between 0 and 1 (inclusive), representing a proportional offset into the duration of the animation element.</p>
+<p>The <strong><code>keyTimes</code></strong> attribute represents a list of time values used to control the pacing of the animation.</p>
+
+<p>Each time in the list corresponds to a value in the {{SVGAttr("values")}} attribute list, and defines when the value is used in the animation. Each time value in the <code>keyTimes</code> list is specified as a floating point value between 0 and 1 (inclusive), representing a proportional offset into the duration of the animation element.</p>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
