--- a/files/en-us/web/svg/attribute/lang/index.html
+++ b/files/en-us/web/svg/attribute/lang/index.html
@@ -8,7 +8,7 @@ browser-compat: svg.attributes.core.lang
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <strong><code>lang</code></strong> attribute specifies the primary language used in contents and attributes containing text content of particular elements.</span></p>
+<p>The <strong><code>lang</code></strong> attribute specifies the primary language used in contents and attributes containing text content of particular elements.</p>
 
 <p>There is also an {{SVGAttr("xml:lang")}} attribute (with namespace). If both of them are defined, the one with namespace is used and the one without is ignored.</p>
 
