--- a/files/en-us/web/svg/attribute/lengthadjust/index.html
+++ b/files/en-us/web/svg/attribute/lengthadjust/index.html
@@ -8,7 +8,7 @@ browser-compat: svg.elements.text.lengthAdjust
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The lengthAdjust attribute controls how the text is stretched into the length defined by the {{SVGAttr("textLength")}} attribute.</span></p>
+<p>The lengthAdjust attribute controls how the text is stretched into the length defined by the {{SVGAttr("textLength")}} attribute.</p>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
