--- a/files/en-us/web/svg/attribute/letter-spacing/index.html
+++ b/files/en-us/web/svg/attribute/letter-spacing/index.html
@@ -8,7 +8,7 @@ browser-compat: svg.attributes.presentation.letter-spacing
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <strong><code>letter-spacing</code></strong> attribute controls spacing between text characters, in addition to any spacing from the {{SVGAttr("kerning")}} attribute.</span></p>
+<p>The <strong><code>letter-spacing</code></strong> attribute controls spacing between text characters, in addition to any spacing from the {{SVGAttr("kerning")}} attribute.</p>
 
 <p>If the attribute value is a unitless number (like <code>128</code>), the browser processes it as a {{cssxref("length")}} in the current user coordinate system.</p>
 
