--- a/files/en-us/web/svg/attribute/media/index.html
+++ b/files/en-us/web/svg/attribute/media/index.html
@@ -8,7 +8,7 @@ browser-compat: svg.elements.style.media
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <code><strong>media</strong></code> attribute specifies a {{Glossary("media query")}} that must be matched for a style sheet to apply.</span></p>
+<p>The <code><strong>media</strong></code> attribute specifies a {{Glossary("media query")}} that must be matched for a style sheet to apply.</p>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
