--- a/files/en-us/web/svg/attribute/overflow/index.html
+++ b/files/en-us/web/svg/attribute/overflow/index.html
@@ -8,7 +8,9 @@ browser-compat: svg.attributes.presentation.overflow
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <strong><code>overflow</code></strong> attribute sets what to do when an element's content is too big to fit in its block formatting context. <strong>This feature is not widely implemented yet</strong>.</span> It has the same parameter values and meaning as the {{cssxref("overflow", "CSS overflow property")}}, however, the following additional points apply:</p>
+<p>The <strong><code>overflow</code></strong> attribute sets what to do when an element's content is too big to fit in its block formatting context. <strong>This feature is not widely implemented yet</strong>.</p>
+
+<p>This attribute has the same parameter values and meaning as the {{cssxref("overflow", "CSS overflow property")}}, however, the following additional points apply:</p>
 
 <ul>
  <li>If it has a value of <code>visible</code>, the attribute has no effect (i.e., a clipping rectangle is not created).</li>
