--- a/files/en-us/web/svg/attribute/style/index.html
+++ b/files/en-us/web/svg/attribute/style/index.html
@@ -8,7 +8,7 @@ browser-compat: svg.attributes.style.style
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <strong><code>style</code></strong> attribute allows to style an element using {{Glossary("CSS")}} declarations. It functions identically to <a href="/en-US/docs/Web/HTML/Global_attributes/style">the <code>style</code> attribute in HTML</a>.</span></p>
+<p>The <strong><code>style</code></strong> attribute allows to style an element using {{Glossary("CSS")}} declarations. It functions identically to <a href="/en-US/docs/Web/HTML/Global_attributes/style">the <code>style</code> attribute in HTML</a>.</p>
 
 <p>You can use this attribute with any SVG element.</p>
 
