--- a/files/en-us/web/svg/attribute/text-decoration/index.html
+++ b/files/en-us/web/svg/attribute/text-decoration/index.html
@@ -8,7 +8,7 @@ browser-compat: svg.attributes.presentation.text-decoration
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <strong><code>text-decoration</code></strong> attribute defines whether text is decorated with an underline, overline and/or strike-through.</span> It is a shorthand for the {{cssxref("text-decoration-line")}} and {{cssxref("text-decoration-style")}} properties.</p>
+<p>The <strong><code>text-decoration</code></strong> attribute defines whether text is decorated with an underline, overline and/or strike-through. It is a shorthand for the {{cssxref("text-decoration-line")}} and {{cssxref("text-decoration-style")}} properties.</p>
 
 <p>The fill and stroke of the text decoration are given by the fill and stroke of the text at the point where the text decoration is declared.</p>
 
