--- a/files/en-us/web/svg/attribute/to/index.html
+++ b/files/en-us/web/svg/attribute/to/index.html
@@ -8,7 +8,9 @@ tags:
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <code><strong>to</strong></code> attribute indicates the final value of the attribute that will be modified during the animation.</span> The value of the attribute will change between the {{SVGAttr("from")}} attribute value and this value.</p>
+<p>The <code><strong>to</strong></code> attribute indicates the final value of the attribute that will be modified during the animation.</p>
+
+<p>The value of the attribute will change between the {{SVGAttr("from")}} attribute value and this value.</p>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
