--- a/files/en-us/web/svg/attribute/widths/index.html
+++ b/files/en-us/web/svg/attribute/widths/index.html
@@ -9,7 +9,7 @@ browser-compat: svg.elements.font-face.widths
 ---
 <div>{{SVGRef}}{{Deprecated_Header}}</div>
 
-<p><span class="seoSummary">The <strong><code>widths</code></strong> attribute indicates a list of range values, each followed by one or more {{Glossary("glyph")}} widths.</span></p>
+<p>The <strong><code>widths</code></strong> attribute indicates a list of range values, each followed by one or more {{Glossary("glyph")}} widths.</p>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
