--- a/files/en-us/web/svg/attribute/xml_colon_lang/index.html
+++ b/files/en-us/web/svg/attribute/xml_colon_lang/index.html
@@ -8,7 +8,7 @@ browser-compat: svg.attributes.core.xml_lang
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <strong><code>xml:lang</code></strong> attribute specifies the primary language used in contents and attributes containing text content of particular elements.</span></p>
+<p>The <strong><code>xml:lang</code></strong> attribute specifies the primary language used in contents and attributes containing text content of particular elements.</p>
 
 <p>It is a universal attribute allowed in all XML dialects to mark up the natural human language that an element contains.</p>
 
