--- a/files/en-us/web/svg/attribute/xml_colon_space/index.html
+++ b/files/en-us/web/svg/attribute/xml_colon_space/index.html
@@ -8,7 +8,7 @@ browser-compat: svg.attributes.core.xml_space
 ---
 <div>{{SVGRef}}{{Deprecated_Header}}</div>
 
-<p><span class="seoSummary">SVG supports the built-in XML <strong><code>xml:space</code></strong> attribute to handle whitespace characters inside elements.</span> Child elements inside an element may also have an <code>xml:space</code> attribute that overrides the parent's one.</p>
+<p>SVG supports the built-in XML <strong><code>xml:space</code></strong> attribute to handle whitespace characters inside elements. Child elements inside an element may also have an <code>xml:space</code> attribute that overrides the parent's one.</p>
 
 <div class="notecard note">
 <p><strong>Note:</strong> Instead of using the <code>xml:space</code> attribute, use the {{cssxref("white-space")}} CSS property.</p>
