--- a/files/en-us/web/svg/content_type/index.html
+++ b/files/en-us/web/svg/content_type/index.html
@@ -7,7 +7,7 @@ tags:
   - Types
   - data types
 ---
-<p><span class="seoSummary">SVG makes use of a number of data types. This article lists these types along with their syntax and descriptions of what they're used for.</span></p>
+<p>SVG makes use of a number of data types. This article lists these types along with their syntax and descriptions of what they're used for.</p>
 
 <h2 id="Angle">Angle</h2>
 
