--- a/files/en-us/web/svg/element/image/index.html
+++ b/files/en-us/web/svg/element/image/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.elements.image
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <strong><code>&lt;image&gt;</code></strong> SVG element includes images inside SVG documents. It can display {{glossary("raster image")}} files or other SVG files.</span></p>
+<p>The <strong><code>&lt;image&gt;</code></strong> SVG element includes images inside SVG documents. It can display {{glossary("raster image")}} files or other SVG files.</p>
 
 <p>The only image formats SVG software must support are {{glossary("JPEG")}}, {{glossary("PNG")}}, and other SVG files. Animated {{glossary("GIF")}} behavior is undefined.</p>
 
