--- a/files/en-us/web/svg/element/pattern/index.html
+++ b/files/en-us/web/svg/element/pattern/index.html
@@ -9,7 +9,7 @@ browser-compat: svg.elements.pattern
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <strong><code>&lt;pattern&gt;</code></strong> element defines a graphics object which can be redrawn at repeated x- and y-coordinate intervals ("tiled") to cover an area.</span></p>
+<p>The <strong><code>&lt;pattern&gt;</code></strong> element defines a graphics object which can be redrawn at repeated x- and y-coordinate intervals ("tiled") to cover an area.</p>
 
 <p>The <code>&lt;pattern&gt;</code> is referenced by the {{SVGAttr("fill")}} and/or {{SVGAttr("stroke")}} attributes on other <a href="/en-US/docs/Web/SVG/Tutorial/Basic_Shapes">graphics elements</a> to fill or stroke those elements with the referenced pattern.</p>
 
