--- a/files/en-us/web/svg/scripting/index.html
+++ b/files/en-us/web/svg/scripting/index.html
@@ -10,7 +10,7 @@ tags:
   - preventing
   - setProperty
 ---
-<p><span class="seoSummary">One can override default browser behaviors with the <em>evt.preventDefault( )</em> method, add eventListeners to objects with the syntax <em>element.addEventListener(event, function, useCapture), and set element properties with syntax </em><code>svgElement.style.setProperty("fill-opacity", "0.0", ""). </code>Note the existence of all three arguments setting properties.</span></p>
+<p>One can override default browser behaviors with the <em>evt.preventDefault( )</em> method, add eventListeners to objects with the syntax <em>element.addEventListener(event, function, useCapture), and set element properties with syntax </em><code>svgElement.style.setProperty("fill-opacity", "0.0", ""). </code>Note the existence of all three arguments setting properties.</p>
 
 <h3 id="Preventing_default_behavior_in_event_code">Preventing default behavior in event code</h3>
 
