--- a/files/en-us/web/svg/tutorial/positions/index.html
+++ b/files/en-us/web/svg/tutorial/positions/index.html
@@ -13,7 +13,7 @@ tags:
 ---
 <p>{{ PreviousNext("Web/SVG/Tutorial/Getting_Started", "Web/SVG/Tutorial/Basic_Shapes") }}</p>
 
-<p><span class="seoSummary">In this article, we examine how Scalable Vector Graphics (SVG) represents the positions and sizes of objects within a drawing context, including coordinate system and what a "pixel" measurement means in a scalable context.</span></p>
+<p>In this article, we examine how Scalable Vector Graphics (SVG) represents the positions and sizes of objects within a drawing context, including coordinate system and what a "pixel" measurement means in a scalable context.</p>
 
 <h2 id="The_grid">The grid</h2>
 
