--- a/files/en-us/web/svg/attribute/crossorigin/index.html
+++ b/files/en-us/web/svg/attribute/crossorigin/index.html
@@ -13,7 +13,7 @@ browser-compat: api.SVGImageElement.crossOrigin
 ---
 <p>{{SVGRef}}{{draft}}</p>
 
-<p class="seoSummary">The crossorigin attribute, valid on the {{ SVGElement("image") }} element, provides support for <a href="/en-US/docs/Web/HTTP/CORS">CORS</a>, defining how the element handles crossorigin requests, thereby enabling the configuration of the CORS requests for the element's fetched data. It is a CORS settings attribute.</p>
+<p>The crossorigin attribute, valid on the {{ SVGElement("image") }} element, provides support for <a href="/en-US/docs/Web/HTTP/CORS">CORS</a>, defining how the element handles crossorigin requests, thereby enabling the configuration of the CORS requests for the element's fetched data. It is a CORS settings attribute.</p>
 
 <p>This table shows all possible keywords and their meaning:</p>
 
