--- a/files/en-us/web/svg/attribute/from/index.html
+++ b/files/en-us/web/svg/attribute/from/index.html
@@ -8,7 +8,9 @@ browser-compat: svg.elements.animate.from
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <code><strong>from</strong></code> attribute indicates the initial value of the attribute that will be modified during the animation.</span> When used with the {{SVGAttr("to")}} attribute, the animation will change the modified attribute from the <code>from</code> value to the <code>to</code> value. When used with the {{SVGAttr("by")}} attribute, the animation will change the attribute relatively from the <code>from</code> value by the value specified in <code>by</code>.</p>
+<p>The <code><strong>from</strong></code> attribute indicates the initial value of the attribute that will be modified during the animation.</p>
+
+<p>When used with the {{SVGAttr("to")}} attribute, the animation will change the modified attribute from the <code>from</code> value to the <code>to</code> value. When used with the {{SVGAttr("by")}} attribute, the animation will change the attribute relatively from the <code>from</code> value by the value specified in <code>by</code>.</p>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
