--- a/files/en-us/web/svg/attribute/horiz-origin-y/index.html
+++ b/files/en-us/web/svg/attribute/horiz-origin-y/index.html
@@ -9,7 +9,7 @@ browser-compat: svg.elements.font.horiz-origin-y
 ---
 <div>{{SVGRef}}{{Deprecated_Header}}</div>
 
-<p class="seoSummary">The <strong><code>horiz-origin-y</code></strong> attribute indicates the y-coordinate in the font coordinate system of the origin of a {{Glossary("glyph")}} to be used when drawing horizontally oriented text.</p>
+<p>The <strong><code>horiz-origin-y</code></strong> attribute indicates the y-coordinate in the font coordinate system of the origin of a {{Glossary("glyph")}} to be used when drawing horizontally oriented text.</p>
 
 <p class="note"><strong>Note:</strong> The origin applies to all glyphs in the font.</p>
 
