--- a/files/en-us/web/svg/attribute/text-anchor/index.html
+++ b/files/en-us/web/svg/attribute/text-anchor/index.html
@@ -8,7 +8,9 @@ browser-compat: svg.attributes.presentation.text-anchor
 ---
 <div>{{SVGRef}}</div>
 
-<p><span class="seoSummary">The <strong><code>text-anchor</code></strong> attribute is used to align (start-, middle- or end-alignment) a string of pre-formatted text or auto-wrapped text where the wrapping area is determined from the {{SVGAttr("inline-size")}} property relative to a given point.</span> It is not applicable to other types of auto-wrapped text. For those cases you should use {{cssxref("text-align")}}. For multi-line text, the alignment takes place for each line.</p>
+<p>The <strong><code>text-anchor</code></strong> attribute is used to align (start-, middle- or end-alignment) a string of pre-formatted text or auto-wrapped text where the wrapping area is determined from the {{SVGAttr("inline-size")}} property relative to a given point.</p>
+
+<p>This attribute is not applicable to other types of auto-wrapped text. For those cases you should use {{cssxref("text-align")}}. For multi-line text, the alignment takes place for each line.</p>
 
 <p>The <code>text-anchor</code> attribute is applied to each individual text chunk within a given {{SVGElement("text")}} element. Each text chunk has an initial current text position, which represents the point in the user coordinate system resulting from (depending on context) application of the {{SVGAttr("x")}} and {{SVGAttr("y")}} attributes on the <code>&lt;text&gt;</code> element, any <code>x</code> or <code>y</code> attribute values on a {{SVGElement("tspan")}}, {{SVGElement("tref")}} or {{SVGElement("altGlyph")}} element assigned explicitly to the first rendered character in a text chunk, or determination of the initial current text position for a {{SVGElement("textPath")}} element.</p>
 
