Fix a broken live sample

--- a/files/en-us/web/svg/attribute/id/index.html
+++ b/files/en-us/web/svg/attribute/id/index.html
@@ -28,7 +28,7 @@ browser-compat: svg.attributes.core.id
 &lt;/svg&gt;
 </pre>
 
-<p>{{EmbedLiveSample("topExample", "120", "120")}}</p>
+<p>{{EmbedLiveSample("Example", "120", "120")}}</p>
 </div>
 
 <h2 id="Usage_notes">Usage notes</h2>
