--- a/files/en-us/web/svg/attribute/textlength/index.html
+++ b/files/en-us/web/svg/attribute/textlength/index.html
@@ -39,7 +39,6 @@ browser-compat: svg.attributes.textLength
   &lt;text y="20" textLength="6em"&gt;Small text length&lt;/text&gt;
   &lt;text y="40" textLength="120%"&gt;Big text length&lt;/text&gt;
 &lt;/svg&gt;</pre>
-</div>
 
 <p>{{EmbedLiveSample("Example", "200", "100")}}</p>
 
@@ -69,11 +68,10 @@ browser-compat: svg.attributes.textLength
  <dd>A numeric value outlines a length referring to the units of the current coordinate system.</dd>
 </dl>
 
-<h2 id="Example">Example</h2>
+<h2>Interactive example</h2>
 
 <p>Let's create a simple example that presents text you can resize using an {{HTMLElement("input")}} element of type <code><a href="/en-US/docs/Web/HTML/Element/input/range">"range"</a></code>.</p>
 
-<div class="hidden">
 <h3 id="CSS">CSS</h3>
 
 <pre class="brush: css">.controls {
@@ -140,7 +138,7 @@ widthSlider.dispatchEvent(new Event("input"));
 
 <p>Here's what the example looks like. Try dragging the slider around to get a feel for what it does.</p>
 
-<p>{{EmbedLiveSample("Example", 650, 160)}}</p>
+<p>{{EmbedLiveSample("Interactive_example", 650, 160)}}</p>
 
 <h2 id="Specifications">Specifications</h2>
 
