--- a/files/en-us/web/mathml/fonts/index.html
+++ b/files/en-us/web/mathml/fonts/index.html
@@ -6,7 +6,9 @@ tags:
   - MathML
   - Project
 ---
-<p>Fonts with appropriate Unicode coverage and Open Font Format features are required for good math rendering. This wiki page describes how users can install and use such math fonts with Mozilla&apos;s MathML engine. Note that most of these instructions may as well apply to other Web rendering engines.</p>
+<p>Fonts with appropriate Unicode coverage and Open Font Format features are required for good math rendering.
+  This page describes how users can install and use such math fonts with Mozilla's MathML engine.
+  Note that most of these instructions may as well apply to other Web rendering engines.</p>
 
 <h2 id="Installation_Instructions">Installation Instructions</h2>
 
@@ -24,7 +26,7 @@ tags:
 </ol>
 
 <div class="note notecard">
-<p><strong>Note</strong>:<em>Cambria Math</em> is installed by default on Windows 7 and later versions and should ensure relatively good MathML rendering. <a href="https://windows.uservoice.com/forums/265757-windows-feature-suggestions/suggestions/9727281-add-new-math-fonts-latin-modern-math-and-stix-2">An enhancement request has been submitted to Microsoft to install Latin Modern Math and STIX by default</a>.</p>
+<p><strong>Note:</strong> <em>Cambria Math</em> is installed by default on Windows 7 and later versions and should ensure relatively good MathML rendering. <a href="https://windows.uservoice.com/forums/265757-windows-feature-suggestions/suggestions/9727281-add-new-math-fonts-latin-modern-math-and-stix-2">An enhancement request has been submitted to Microsoft to install Latin Modern Math and STIX by default</a>.</p>
 </div>
 
 <h3 id="OS_X">OS X</h3>
@@ -41,7 +43,7 @@ tags:
 </ol>
 
 <div class="note notecard">
-<p><strong>Note</strong>: A deprecated version of STIX is preinstalled starting with OS X Lion and should ensure relatively good MathML rendering. Enhancement requests have been submitted to Apple to ship OpenType MATH fonts <span class="probNo" id="displayFullDetailsProblemID">in the default installation. If you have a developer account, these are problems </span><span class="probNo" id="displayFullDetailsProblemID">16841023</span> and <span class="probNo" id="displayFullDetailsProblemID">17021145.</span></p>
+<p><strong>Note:</strong> A deprecated version of STIX is preinstalled starting with OS X Lion and should ensure relatively good MathML rendering. Enhancement requests have been submitted to Apple to ship OpenType MATH fonts <span class="probNo" id="displayFullDetailsProblemID">in the default installation. If you have a developer account, these are problems </span><span class="probNo" id="displayFullDetailsProblemID">16841023</span> and <span class="probNo" id="displayFullDetailsProblemID">17021145.</span></p>
 </div>
 
 <h3 id="Linux">Linux</h3>
@@ -50,33 +52,33 @@ tags:
 
 <p>On Debian/Ubuntu/Mint and other Debian-based distributions, use the following command:</p>
 
-<pre class="notranslate">sudo apt-get install <code>fonts-lmodern fonts-stix</code></pre>
+<pre class="brush: bash">sudo apt-get install <code>fonts-lmodern fonts-stix</code></pre>
 
 <p>On Fedora and other Fedora-based distributions, use the following command (<code>stix-math-fonts</code> is often already installed):</p>
 
-<pre class="notranslate">sudo dnf install <code>texlive-lm-math stix-math-fonts</code></pre>
+<pre class="brush: bash">sudo dnf install <code>texlive-lm-math stix-math-fonts</code></pre>
 
 <p>On openSUSE and other openSUSE-based distributions, use the following command:</p>
 
-<pre class="notranslate">sudo zypper install texlive-lm-math stix-fonts</pre>
+<pre class="brush: plain">sudo zypper install texlive-lm-math stix-fonts</pre>
 
 <p>On other Linux distributions, consider installing appropriate <code>texlive</code> packages, which includes <em>Latin Modern Math</em> and <em>XITS</em>:</p>
 
-<pre class="notranslate">sudo pacman -S texlive-core texlive-fontsextra # Arch Linux
+<pre class="brush: bash">sudo pacman -S texlive-core texlive-fontsextra # Arch Linux
 sudo urpmi texlive-dist texlive-fontsextra # Mageia
 </pre>
 
 <p>However, you might need to ensure that the fonts are known by your system. Typically,  use a fontconfig configuration <code>/etc/fonts/conf.avail/09-texlive-fonts.conf</code> that points to the <code>opentype</code> directory of TeXLive, such as:</p>
 
-<pre class="lang-tex prettyprint prettyprinted notranslate"><code><span class="pln">&lt;?xml version</span><span class="pun">=</span><span class="pln">&quot;1.0&quot;?&gt;
+<pre class="brush: tex">&lt;?xml version=&quot;1.0&quot;?&gt;
 &lt;!DOCTYPE fontconfig SYSTEM &quot;fonts.dtd&quot;&gt;
 &lt;fontconfig&gt;
   &lt;dir&gt;/your/path/to/texmf-dist/fonts/opentype&lt;/dir&gt;
-&lt;/fontconfig&gt;</span></code></pre>
+&lt;/fontconfig&gt;</pre>
 
 <p>Finally, add this configuration file to the system font location list and regenerate the fontconfig cache:</p>
 
-<pre class="notranslate">ln -sf /etc/fonts/conf.avail/09-texlive-fonts.conf /etc/fonts/conf.d/
+<pre class="brush: plain">ln -sf /etc/fonts/conf.avail/09-texlive-fonts.conf /etc/fonts/conf.d/
 fc-cache -sf
 </pre>
 
@@ -85,7 +87,7 @@ fc-cache -sf
 <p>You must use the <a href="https://addons.mozilla.org/firefox/addon/mathml-fonts/">MathML-fonts add-on</a>.</p>
 
 <div class="note notecard">
-<p><strong>Note</strong>: There is an <a href="https://github.com/googlei18n/noto-fonts/issues/330">enhancement request</a> opened on the Noto bug tracker to improve math support.</p>
+<p><strong>Note:</strong> There is an <a href="https://github.com/googlei18n/noto-fonts/issues/330">enhancement request</a> opened on the Noto bug tracker to improve math support.</p>
 </div>
 
 <h3 id="Firefox_OS">Firefox OS</h3>
@@ -93,7 +95,7 @@ fc-cache -sf
 <p>You must use the <a href="https://addons.mozilla.org/firefox/addon/mathml-fonts/">MathML-fonts add-on</a>.</p>
 
 <div class="note notecard">
-<p><strong>Note</strong>: We <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=775060">plan to bundle</a> a <a href="#math_fonts">MATH font</a> in the default installation.</p>
+<p><strong>Note:</strong> We <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=775060">plan to bundle</a> a <a href="#math_fonts">MATH font</a> in the default installation.</p>
 </div>
 
 <h3 id="Other_systems">Other systems</h3>
@@ -110,7 +112,8 @@ fc-cache -sf
 
 <p>If you need to install fonts on a system without adminstrator privilege, the easiest option is to use math font the <a href="https://addons.mozilla.org/firefox/addon/mathml-fonts/">MathML-fonts add-on</a>. Note that using the add-on is not optimal since it forces your Gecko browser to load a CSS stylesheet on each page you visit as well as Web math fonts on all pages with MathML content. A better alternative on UNIX systems is to install the OTF files for <a href="http://www.gust.org.pl/projects/e-foundry/lm-math/download/latinmodern-math-1959.zip">Latin Modern Math</a> and <a href="https://github.com/stipub/stixfonts">STIX</a> into some local font folder and (if necessary) to run <code>fc-cache</code> on it. On OS X and Linux, the standard paths are <code>~/Library/Fonts/</code> and <code>~/.fonts</code>.</p>
 
-<h3 id="Fonts_with_a_MATH_table"><span id="MATH_fonts"></a>Fonts with a MATH table</span></h3>
+<a id="MATH_fonts"></a>
+<h3 id="Fonts_with_a_MATH_table">Fonts with a MATH table</h3>
 
 <p>You can actually render MathML using any font with a MATH table and related Open Font Format features. A list of such math fonts is provided below. You can use the <em>advanced font preference menu</em> to configure the default font for mathematics. Alternatively, you can try the <a href="https://addons.mozilla.org/en-US/firefox/addon/mathml-font-settings/">MathML-fontsettings add-on</a>.</p>
 
@@ -133,4 +136,6 @@ fc-cache -sf
 
 <h3 id="Using_mathematical_fonts_on_Web_pages">Using mathematical fonts on Web pages</h3>
 
-<p>Starting with Gecko 31.0 (Firefox 31.0 / Thunderbird 31.0 / SeaMonkey 2.28), it is now easy to set up the CSS style (and optional WOFF fonts) to use on your Web site. See the <a href="/en-US/docs/Web/MathML/Authoring#mathematical_fonts">Authoring MathML page</a> for details. You can use <a href="https://github.com/behdad/fonttools">FontTools</a> to edit the MATH table and create your own mathematical fonts.</p>
+<p>Starting with Gecko 31.0 (Firefox 31.0 / Thunderbird 31.0 / SeaMonkey 2.28), it is now easy to set up the CSS style (and optional WOFF fonts) to use on your Web site.
+  See the <a href="/en-US/docs/Web/MathML/Authoring#mathematical_fonts">Authoring MathML page</a> for details.
+  You can use <a href="https://github.com/behdad/fonttools">FontTools</a> to edit the MATH table and create your own mathematical fonts.</p>
