Remove SVG attribute IDs

--- a/files/en-us/web/svg/element/animatemotion/index.html
+++ b/files/en-us/web/svg/element/animatemotion/index.html
@@ -40,13 +40,13 @@ browser-compat: svg.elements.animateMotion
 <h2 id="Attributes">Attributes</h2>
 
 <dl>
- <dt id="attr-keyPoints">{{SVGAttr("keyPoints")}}</dt>
+ <dt>{{SVGAttr("keyPoints")}}</dt>
  <dd>This attribute indicate, in the range [0,1], how far is the object along the path for each {{SVGAttr("keyTimes")}} associated values.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#number"><strong>&lt;number&gt;</strong></a>*; <em>Default value</em>: none; <em>Animatable</em>: <strong>no</strong></small></dd>
- <dt id="attr-path">{{SVGAttr("path")}}</dt>
+ <dt>{{SVGAttr("path")}}</dt>
  <dd>This attribute defines the path of the motion, using the same syntax as the {{SVGAttr('d')}} attribute.<br>
  <small><em>Value type</em>: <strong>&lt;string&gt;</strong>; <em>Default value</em>: none; <em>Animatable</em>: <strong>no</strong></small></dd>
- <dt id="attr-rotate">{{SVGAttr("rotate")}}</dt>
+ <dt>{{SVGAttr("rotate")}}</dt>
  <dd>This attribute defines a rotation applied to the element animated along a path, usually to make it pointing in the direction of the animation.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#number"><strong>&lt;number&gt;</strong></a>|<code>auto</code>|<code>auto-reverse</code>; <em>Default value</em>: <code>0</code>; <em>Animatable</em>: <strong>no</strong></small></dd>
 </dl>
