--- a/files/en-us/web/svg/element/circle/index.html
+++ b/files/en-us/web/svg/element/circle/index.html
@@ -28,13 +28,13 @@ browser-compat: svg.elements.circle
 <h2 id="Attributes">Attributes</h2>
 
 <dl>
- <dt id="attr-cx">{{SVGAttr("cx")}}</dt>
+ <dt>{{SVGAttr("cx")}}</dt>
  <dd>The x-axis coordinate of the center of the circle.<br>
  <small><em>Value type</em>: <strong><a href="/en-US/docs/Web/SVG/Content_type#length">&lt;length&gt;</a></strong>|<strong><a href="/en-US/docs/Web/SVG/Content_type#percentage">&lt;percentage&gt;</a></strong> ; <em>Default value</em>: <code>0</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-cy">{{SVGAttr("cy")}}</dt>
+ <dt>{{SVGAttr("cy")}}</dt>
  <dd>The y-axis coordinate of the center of the circle.<br>
  <small><em>Value type</em>: <strong><a href="/en-US/docs/Web/SVG/Content_type#length">&lt;length&gt;</a></strong>|<strong><a href="/en-US/docs/Web/SVG/Content_type#percentage">&lt;percentage&gt;</a></strong> ; <em>Default value</em>: <code>0</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-r">{{SVGAttr("r")}}</dt>
+ <dt>{{SVGAttr("r")}}</dt>
  <dd>The radius of the circle. A value lower or equal to zero disables rendering of the circle.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#length"><strong>&lt;length&gt;</strong></a> ; <em>Default value</em>: <code>0</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
  <dt>{{SVGAttr("pathLength")}}</dt>
