--- a/files/en-us/web/svg/element/fedropshadow/index.html
+++ b/files/en-us/web/svg/element/fedropshadow/index.html
@@ -50,13 +50,13 @@ browser-compat: svg.elements.feDropShadow
 <h2 id="Attributes">Attributes</h2>
 
 <dl>
- <dt id="attr-dx">{{SVGAttr("dx")}}</dt>
+ <dt>{{SVGAttr("dx")}}</dt>
  <dd>This attribute defines the x offset of the drop shadow.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#number"><strong>&lt;number&gt;</strong></a>; <em>Default value</em>: <code>2</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-dy">{{SVGAttr("dy")}}</dt>
+ <dt>{{SVGAttr("dy")}}</dt>
  <dd>This attribute defines the y offset of the drop shadow.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#number"><strong>&lt;number&gt;</strong></a>; <em>Default value</em>: <code>2</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-stdDeviation">{{SVGAttr("stdDeviation")}}</dt>
+ <dt>{{SVGAttr("stdDeviation")}}</dt>
  <dd>This attribute defines the standard deviation for the blur operation in the drop shadow.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#number"><strong>&lt;number&gt;</strong></a>; <em>Default value</em>: <code>2</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
 </dl>
