--- a/files/en-us/web/svg/element/mask/index.html
+++ b/files/en-us/web/svg/element/mask/index.html
@@ -37,7 +37,7 @@ browser-compat: svg.elements.mask
 <h2 id="Attributes">Attributes</h2>
 
 <dl>
- <dt id="attr-height">{{SVGAttr("height")}}</dt>
+ <dt>{{SVGAttr("height")}}</dt>
  <dd>This attribute defines the height of the masking area.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#length"><strong>&lt;length&gt;</strong></a> ; <em>Default value</em>: <code>120%</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
  <dt>{{SVGAttr("maskContentUnits")}}</dt>
@@ -46,13 +46,13 @@ browser-compat: svg.elements.mask
  <dt>{{SVGAttr("maskUnits")}}</dt>
  <dd>This attribute defines the coordinate system for attributes {{SVGAttr("x")}}, {{SVGAttr("y")}}, {{SVGAttr("width")}} and {{SVGAttr("height")}} on the <code>&lt;mask&gt;</code>.<br>
  <small><em>Value type</em>: <code>userSpaceOnUse</code>|<code>objectBoundingBox</code> ; <em>Default value</em>: <code>objectBoundingBox</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-x">{{SVGAttr("x")}}</dt>
+ <dt>{{SVGAttr("x")}}</dt>
  <dd>This attribute defines the x-axis coordinate of the top-left corner of the masking area.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#coordinate"><strong>&lt;coordinate&gt;</strong></a> ; <em>Default value</em>: <code>-10%</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-cy">{{SVGAttr("y")}}</dt>
+ <dt>{{SVGAttr("y")}}</dt>
  <dd>This attribute defines the y-axis coordinate of the top-left corner of the masking area.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#coordinate"><strong>&lt;coordinate&gt;</strong></a> ; <em>Default value</em>: <code>-10%</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-width">{{SVGAttr("width")}}</dt>
+ <dt>{{SVGAttr("width")}}</dt>
  <dd>This attribute defines the width of the masking area.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#length"><strong>&lt;length&gt;</strong></a> ; <em>Default value</em>: <code>120%</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
 </dl>
