--- a/files/en-us/web/svg/element/path/index.html
+++ b/files/en-us/web/svg/element/path/index.html
@@ -31,7 +31,7 @@ browser-compat: svg.elements.path
 <h2 id="Attributes">Attributes</h2>
 
 <dl>
- <dt id="attr-cx">{{SVGAttr("d")}}</dt>
+ <dt>{{SVGAttr("d")}}</dt>
  <dd>This attribute defines the shape of the path.<br>
  <small><em>Value type</em>: <strong>&lt;string&gt;</strong> ; <em>Default value</em>: <code>''</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
  <dt>{{SVGAttr("pathLength")}}</dt>
