--- a/files/en-us/web/svg/element/set/index.html
+++ b/files/en-us/web/svg/element/set/index.html
@@ -37,7 +37,7 @@ browser-compat: svg.elements.set
 <h2 id="Attributes">Attributes</h2>
 
 <dl>
- <dt id="attr-cx">{{SVGAttr("to")}}</dt>
+ <dt>{{SVGAttr("to")}}</dt>
  <dd>This attribute defines the value to be applied to the target attribute for the duration of the animation. The value must match the requirements of the target attribute.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#anything"><strong>&lt;anything&gt;</strong></a>; <em>Default value</em>: none; <em>Animatable</em>: <strong>no</strong></small></dd>
 </dl>
