--- a/files/en-us/web/svg/element/style/index.html
+++ b/files/en-us/web/svg/element/style/index.html
@@ -36,13 +36,13 @@ browser-compat: svg.elements.style
 <h2 id="Attributes">Attributes</h2>
 
 <dl>
- <dt id="attr-type">{{SVGAttr("type")}}</dt>
+ <dt>{{SVGAttr("type")}}</dt>
  <dd>This attribute defines type of the style sheet language to use as a media type string.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#string"><strong>&lt;string&gt;</strong></a>; <em>Default value</em>: <code>text/css</code>; <em>Animatable</em>: <strong>no</strong></small></dd>
- <dt id="attr-media">{{SVGAttr("media")}}</dt>
+ <dt>{{SVGAttr("media")}}</dt>
  <dd>This attribute defines to which {{cssxref('@media', 'media')}} the style applies.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#string"><strong>&lt;string&gt;</strong></a>; <em>Default value</em>: <code>all</code>; <em>Animatable</em>: <strong>no</strong></small></dd>
- <dt id="attr-title">{{SVGAttr("title")}}</dt>
+ <dt>{{SVGAttr("title")}}</dt>
  <dd>This attribute the title of the style sheet which can be used to switch between alternate style sheets.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#string"><strong>&lt;string&gt;</strong></a>; <em>Default value</em>: <em>none</em>; <em>Animatable</em>: <strong>no</strong></small></dd>
 </dl>
