--- a/files/en-us/web/svg/element/textpath/index.html
+++ b/files/en-us/web/svg/element/textpath/index.html
@@ -39,16 +39,16 @@ browser-compat: svg.elements.textPath
 <h2 id="Attributes">Attributes</h2>
 
 <dl>
- <dt id="attr-cx">{{SVGAttr("href")}}</dt>
+ <dt>{{SVGAttr("href")}}</dt>
  <dd>The URL to the path or basic shape on which to render the text. If the <code>path</code> attribute is set, <code>href</code> has no effect.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#url"><strong>&lt;URL&gt;</strong></a> ; <em>Default value</em>: none; <em>Animatable</em>: <strong>yes</strong></small></dd>
  <dt>{{SVGAttr("lengthAdjust")}}</dt>
  <dd>Where length adjustment should be applied to the text: the space between glyphs, or both the space and the glyphs themselves.<br>
  <small><em>Value type</em>: <code>spacing</code>|<code>spacingAndGlyphs</code>; <em>Default value</em>: <code>spacing</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-cy">{{SVGAttr("method")}}</dt>
+ <dt>{{SVGAttr("method")}}</dt>
  <dd>Which method to render individual glyphs along the path.<br>
  <small><em>Value type</em>: <code>align</code>|<code>stretch</code> ; <em>Default value</em>: <code>align</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-r">{{SVGAttr("path")}}</dt>
+ <dt>{{SVGAttr("path")}}</dt>
  <dd>The path on which the text should be rendered.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#path_data"><strong>&lt;path_data&gt;</strong></a> ; <em>Default value</em>: none; <em>Animatable</em>: <strong>yes</strong></small></dd>
  <dt>{{SVGAttr("side")}}</dt>
