--- a/files/en-us/web/svg/element/use/index.html
+++ b/files/en-us/web/svg/element/use/index.html
@@ -47,19 +47,19 @@ That's why the circles have different x positions, but the same stroke value.
 <h2 id="Attributes">Attributes</h2>
 
 <dl>
- <dt id="attr-cx">{{SVGAttr("href")}}</dt>
+ <dt>{{SVGAttr("href")}}</dt>
  <dd>The URL to an element/fragment that needs to be duplicated.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#url"><strong>&lt;URL&gt;</strong></a> ; <em>Default value</em>: none; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-xlink">{{SVGAttr("xlink:href")}}</dt>
+ <dt>{{SVGAttr("xlink:href")}}</dt>
  <dd>{{Deprecated_Header}}An <a href="/en-US/docs/Web/SVG/Content_type#iri">&lt;IRI&gt;</a> reference to an element/fragment that needs to be duplicated.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#iri"><strong>&lt;IRI&gt;</strong></a> ; <em>Default value</em>: none; <em>Animatable</em>: <strong>yes</strong></small></dd>
  <dt>{{SVGAttr("x")}}</dt>
  <dd>The x coordinate of the use element.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#coordinate"><strong>&lt;coordinate&gt;</strong></a> ; <em>Default value</em>: <code>0</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-cy">{{SVGAttr("y")}}</dt>
+ <dt>{{SVGAttr("y")}}</dt>
  <dd>The y coordinate of the use element.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#coordinate"><strong>&lt;coordinate&gt;</strong></a> ; <em>Default value</em>: <code>0</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-r">{{SVGAttr("width")}}</dt>
+ <dt>{{SVGAttr("width")}}</dt>
  <dd>The width of the use element.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#length"><strong>&lt;length&gt;</strong></a> ; <em>Default value</em>: <code>0</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
  <dt>{{SVGAttr("height")}}</dt>
