--- a/files/en-us/web/svg/attribute/core/index.html
+++ b/files/en-us/web/svg/attribute/core/index.html
@@ -24,10 +24,10 @@ browser-compat: svg.attributes.core
 <h2 id="Attributes">Attributes</h2>
 
 <dl>
- <dt id="attr-id">{{SVGAttr('id')}}</dt>
+ <dt>{{SVGAttr('id')}}</dt>
  <dd>Defines a unique identifier (ID) which must be unique in the whole document. Its purpose is to identify the element when linking (using a fragment identifier), scripting, or styling (with CSS).<br>
  <small><em>Value</em>: Any valid ID string; <em>Animatable</em>: <strong>No</strong></small></dd>
- <dt id="attr-lang">{{SVGAttr('lang')}}</dt>
+ <dt>{{SVGAttr('lang')}}</dt>
  <dd>
  <p>Participates in defining the language of the element, the language that non-editable elements are written in or the language that editable elements should be written in. The tag contains one single entry value in the format defined in the <a href="https://www.ietf.org/rfc/bcp/bcp47.txt">Tags for Identifying Languages (BCP47) IETF document</a>.</p>
 
@@ -37,13 +37,13 @@ browser-compat: svg.attributes.core
 
  <p><small><em>Value</em>: Any valid language ID; <em>Animatable</em>: <strong>No</strong></small></p>
  </dd>
- <dt id="attr-tabindex">{{SVGAttr('tabindex')}}</dt>
+ <dt>{{SVGAttr('tabindex')}}</dt>
  <dd>The tabindex SVG attribute allows you to control whether an element is focusable and to define the relative order of the element for the purposes of sequential focus navigation.<br>
  <small><em>Value type</em>: <a href="/docs/Web/SVG/Content_type#Integer">&lt;integer&gt;</a>; <em>Animatable</em>: <strong>No</strong></small></dd>
- <dt id="attr-xml:base">{{SVGAttr('xml:base')}}</dt>
+ <dt>{{SVGAttr('xml:base')}}</dt>
  <dd>Specifies a base IRI other than the base IRI of the document.<br>
  <small><em>Value type</em>: <a href="/docs/Web/SVG/Content_type#IRI">&lt;IRI&gt;</a>; <em>Animatable</em>: <strong>No</strong></small></dd>
- <dt id="attr-xml:lang">{{SVGAttr('xml:lang')}}</dt>
+ <dt>{{SVGAttr('xml:lang')}}</dt>
  <dd>
  <p>It is a universal attribute allowed in all XML dialects to mark up the natural human language that an element contains. It's almost identical in usage to HTML's <a href="/en-US/docs/Web/HTML/Global_attributes/lang">lang</a>, but in conforming XML 1.0 documents, it does not allow the use of a null attribute value (<code>xml:lang=""</code>) to indicate an unknown language. Instead, use <code>xml:lang="und"</code>.</p>
 
@@ -53,7 +53,7 @@ browser-compat: svg.attributes.core
 
  <p><small><em>Value</em>: Any valid language ID; <em>Animatable</em>: <strong>No</strong></small></p>
  </dd>
- <dt id="attr-xml:space">{{SVGAttr('xml:space')}} {{deprecated_inline}}</dt>
+ <dt>{{SVGAttr('xml:space')}} {{deprecated_inline}}</dt>
  <dd>
  <p>SVG supports the standard XML attribute <code>xml:space</code> to specify the handling of white space characters within a given {{ SVGElement("text") }} element's character data.</p>
 
