--- a/files/en-us/web/svg/element/radialgradient/index.html
+++ b/files/en-us/web/svg/element/radialgradient/index.html
@@ -57,7 +57,7 @@ browser-compat: svg.elements.radialGradient
  <dt>{{SVGAttr("gradientUnits")}}</dt>
  <dd>This attribute defines the coordinate system for attributes <code>cx</code>, <code>cy</code>, <code>r</code>, <code>fx</code>, <code>fy</code>, <code>fr</code><br>
  <small><em>Value type</em>: <code>userSpaceOnUse</code>|<code>objectBoundingBox</code> ; <em>Default value</em>: <code>objectBoundingBox</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-cx">{{SVGAttr("gradientTransform")}}</dt>
+ <dt>{{SVGAttr("gradientTransform")}}</dt>
  <dd>This attribute provides additional <a href="/en-US/docs/Web/SVG/Attribute/transform">transformation</a> to the gradient coordinate system.<br>
  <small><em>Value type</em>: <strong><a href="/en-US/docs/Web/SVG/Content_type#transform-list">&lt;transform-list&gt;</a></strong> ; <em>Default value</em>: <em>identity transform</em>; <em>Animatable</em>: <strong>yes</strong></small></dd>
  <dt>{{SVGAttr("href")}}</dt>
@@ -69,7 +69,7 @@ browser-compat: svg.elements.radialGradient
  <dt>{{SVGAttr("spreadMethod")}}</dt>
  <dd>This attribute indicates how the gradient behaves if it starts or ends inside the bounds of the shape containing the gradient.<br>
  <small><em>Value type</em>: <code>pad</code>|<code>reflect</code>|<code>repeat</code> ; <em>Default value</em>: <code>pad</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-xlink">{{SVGAttr("xlink:href")}}</dt>
+ <dt>{{SVGAttr("xlink:href")}}</dt>
  <dd>{{Deprecated_Header}}An <a href="/en-US/docs/Web/SVG/Content_type#iri">&lt;IRI&gt;</a> reference to another <code>&lt;radialGradient&gt;</code> element that will be used as a template.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#iri"><strong>&lt;IRI&gt;</strong></a> ; <em>Default value</em>: none; <em>Animatable</em>: <strong>yes</strong></small></dd>
 </dl>
