--- a/files/en-us/web/svg/element/script/index.html
+++ b/files/en-us/web/svg/element/script/index.html
@@ -43,13 +43,13 @@ browser-compat: svg.elements.script
 <h2 id="Attributes">Attributes</h2>
 
 <dl>
- <dt id="attr-crossorigin">{{htmlattrxref("crossorigin", "script")}}</dt>
+ <dt>{{htmlattrxref("crossorigin", "script")}}</dt>
  <dd>This attribute defines <a href="/en-US/docs/Web/HTML/Attributes/crossorigin">CORS settings</a> as define for the HTML {{HTMLElement('script')}} element.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#string"><strong>&lt;string&gt;</strong></a>; <em>Default value</em>: <code>?</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
  <dt>{{SVGAttr("href")}}</dt>
  <dd>The {{Glossary("URL")}} to the script to load.<br>
  <small><em>Value type</em>: <strong><a href="/en-US/docs/Web/SVG/Content_type#url">&lt;URL&gt;</a></strong> ; <em>Default value</em>: <em>none</em>; <em>Animatable</em>: <strong>no</strong></small></dd>
- <dt id="attr-type">{{SVGAttr("type")}}</dt>
+ <dt>{{SVGAttr("type")}}</dt>
  <dd>This attribute defines type of the script language to use.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#string"><strong>&lt;string&gt;</strong></a>; <em>Default value</em>: <code>application/ecmascript</code>; <em>Animatable</em>: <strong>no</strong></small></dd>
  <dt>{{SVGAttr("xlink:href")}} {{deprecated_inline}}</dt>
