--- a/files/en-us/web/svg/element/stop/index.html
+++ b/files/en-us/web/svg/element/stop/index.html
@@ -36,13 +36,13 @@ browser-compat: svg.elements.stop
 <h2 id="Attributes">Attributes</h2>
 
 <dl>
- <dt id="attr-offset">{{SVGAttr("offset")}}</dt>
+ <dt>{{SVGAttr("offset")}}</dt>
  <dd>This attribute defines where the gradient stop is placed along the gradient vector.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#number"><strong>&lt;number&gt;</strong></a>|<a href="/en-US/docs/Web/SVG/Content_type#percentage"><strong>&lt;percentage&gt;</strong></a>; <em>Default value</em>: <code>0</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-stop-color">{{SVGAttr("stop-color")}}</dt>
+ <dt>{{SVGAttr("stop-color")}}</dt>
  <dd>This attribute defines the color of the gradient stop. It can be used as a CSS property.<br>
  <small><em>Value type</em>: <code>currentcolor</code>|<a href="/en-US/docs/Web/SVG/Content_type#color"><strong>&lt;color&gt;</strong></a>|<a href="/en-US/docs/Web/SVG/Content_type#icccolor"><strong>&lt;icccolor&gt;</strong></a>; <em>Default value</em>: <code>black</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
- <dt id="attr-stop-opacity">{{SVGAttr("stop-opacity")}}</dt>
+ <dt>{{SVGAttr("stop-opacity")}}</dt>
  <dd>This attribute defines the opacity of the gradient stop. It can be used as a CSS property.<br>
  <small><em>Value type</em>: <a href="/en-US/docs/Web/SVG/Content_type#opacity_value"><strong>&lt;opacity&gt;</strong></a>; <em>Default value</em>: <code>1</code>; <em>Animatable</em>: <strong>yes</strong></small></dd>
 </dl>
