Glossary: Fix seosummary

--- a/files/en-us/glossary/jquery/index.html
+++ b/files/en-us/glossary/jquery/index.html
@@ -6,7 +6,7 @@ tags:
   - JQuery
   - JavaScript
 ---
-<p><span class="seoSummary"><strong>jQuery</strong> is a {{Glossary("JavaScript")}} {{Glossary("Library")}} that focuses on simplifying {{Glossary("DOM")}} manipulation, {{Glossary("AJAX")}} calls, and {{Glossary("Event")}} handling.</span></p>
+<p><strong>jQuery</strong> is a {{Glossary("JavaScript")}} {{Glossary("Library")}} that focuses on simplifying {{Glossary("DOM")}} manipulation, {{Glossary("AJAX")}} calls, and {{Glossary("Event")}} handling.</p>
 
 <p>jQuery uses a format, <code>$(selector).action()</code> to assign an element(s) to an event. To explain it in detail, <code>$(selector)</code> will call jQuery to select <code>selector</code> element(s), and assign it to an event {{Glossary("API")}} called <code>.action()</code>.</p>
 
