--- a/files/en-us/glossary/media/audio-visual_presentation/index.html
+++ b/files/en-us/glossary/media/audio-visual_presentation/index.html
@@ -8,7 +8,9 @@ tags:
   - Multimedia
   - Video
 ---
-<p><span class="seoSummary">The term <strong>media</strong> (more accurately, <strong>multimedia</strong>) refers to audio, video, or combined audio-visual material such as music, recorded speech, movies, TV shows, or any other form of content that is presented over a period of time.</span> More broadly, media may include still images such as photographs or other still images.</p>
+<p>The term <strong>media</strong> (more accurately, <strong>multimedia</strong>) refers to audio, video, or combined audio-visual material such as music, recorded speech, movies, TV shows, or any other form of content that is presented over a period of time.</p>
+
+<p>More broadly, media may include still images such as photographs or other still images.</p>
 
 <p>Media content can be recorded, played back, presented, and at times interacted with in various ways.</p>
 
