--- a/files/en-us/glossary/media/css/index.html
+++ b/files/en-us/glossary/media/css/index.html
@@ -7,7 +7,9 @@ tags:
   - Intro
   - Media
 ---
-<p><span class="seoSummary">In the context of {{Glossary("CSS")}} (Cascading Style Sheets), the term <strong><dfn>media</dfn></strong> refers to the destination to which the document is to be drawn by the {{Glossary("rendering engine")}}. </span>Typically, this is a screen—but it may also be a printer, a speech synthesizer, Braille display, or another type of device.</p>
+<p>In the context of {{Glossary("CSS")}} (Cascading Style Sheets), the term <strong><dfn>media</dfn></strong> refers to the destination to which the document is to be drawn by the {{Glossary("rendering engine")}}.</p>
+
+<p>Typically, this is a screen—but it may also be a printer, a speech synthesizer, Braille display, or another type of device.</p>
 
 <p>CSS offers several features that allow you to tweak your document's styles—or even offer different styles—according to the media <strong>type</strong> (such as screen or print, to name two) or media <strong>capabilities</strong> (such as width, resolution, or other values) of the viewer's device.</p>
 
