--- a/files/en-us/glossary/node.js/index.html
+++ b/files/en-us/glossary/node.js/index.html
@@ -7,7 +7,7 @@ tags:
   - JavaScript
   - node.js
 ---
-<p><span class="seoSummary">Node.js is a cross-platform {{Glossary("JavaScript")}} runtime environment that allows developers to build server-side and network applications with JavaScript.</span></p>
+<p>Node.js is a cross-platform {{Glossary("JavaScript")}} runtime environment that allows developers to build server-side and network applications with JavaScript.</p>
 
 <h2 id="Node_Package_Manager_npm">Node Package Manager (npm)</h2>
 
