--- a/files/en-us/glossary/node/dom/index.html
+++ b/files/en-us/glossary/node/dom/index.html
@@ -5,7 +5,9 @@ tags:
   - CodingScripting
   - Glossary
 ---
-<p><span class="seoSummary">In the context of the {{Glossary("DOM")}}, a <strong>node</strong> is a single point in the node tree. Various things that are nodes are the document itself, elements, text, and comments.</span></p>
+<p>In the context of the {{Glossary("DOM")}}, a <strong>node</strong> is a single point in the node tree. Various things that are nodes are the document itself, elements, text, and comments.</p>
+
+<p></p>
 
 <h2 id="Learn_more">Learn more</h2>
 
