--- a/files/en-us/glossary/page_load_time/index.html
+++ b/files/en-us/glossary/page_load_time/index.html
@@ -8,7 +8,7 @@ tags:
   - metrics
   - page load time
 ---
-<p><span class="seoSummary"><strong>Page load time</strong> is the time it takes for a page to load, measured from <a href="/en-US/docs/Web/API/PerformanceTiming/navigationStart">navigation start</a> to the </span><a href="/en-US/docs/Web/API/PerformanceTiming/loadEventStart"><span class="seoSummary">start of the load event</span>. </a></p>
+<p><strong>Page load time</strong> is the time it takes for a page to load, measured from <a href="/en-US/docs/Web/API/PerformanceTiming/navigationStart">navigation start</a> to the <a href="/en-US/docs/Web/API/PerformanceTiming/loadEventStart">start of the load event</a>.</p>
 
 <pre class="brush: js">let time = performance.timing;
 
