--- a/files/en-us/glossary/placeholder_names/index.html
+++ b/files/en-us/glossary/placeholder_names/index.html
@@ -6,7 +6,9 @@ tags:
   - Glossary
   - Security
 ---
-<p><span class="seoSummary">Placeholder names are commonly used in cryptography to indicate the participants in a conversation, without resorting to terminology such as "Party A," "eavesdropper," and "malicious attacker."</span> The most commonly used names are:</p>
+<p>Placeholder names are commonly used in cryptography to indicate the participants in a conversation, without resorting to terminology such as "Party A," "eavesdropper," and "malicious attacker."</p>
+
+<p>The most commonly used names are:</p>
 
 <ul>
  <li><em>Alice</em> and <em>Bob</em>, two parties who want to send messages to each other, occasionally joined by <em>Carol</em>, a third participant</li>
