--- a/files/en-us/glossary/primitive/index.html
+++ b/files/en-us/glossary/primitive/index.html
@@ -6,7 +6,7 @@ tags:
   - Glossary
   - JavaScript
 ---
-<p><span class="seoSummary">In {{Glossary("JavaScript")}}, a <strong>primitive</strong> (primitive value, primitive data type) is data that is not an {{Glossary("object")}} and has no {{glossary("method","methods")}}. There are 7 primitive data types: {{Glossary("string")}}, {{Glossary("number")}}, {{Glossary("bigint")}}, {{Glossary("boolean")}}, {{Glossary("undefined")}}, {{Glossary("symbol")}}, and {{Glossary("null")}}.</span></p>
+<p>In {{Glossary("JavaScript")}}, a <strong>primitive</strong> (primitive value, primitive data type) is data that is not an {{Glossary("object")}} and has no {{glossary("method","methods")}}. There are 7 primitive data types: {{Glossary("string")}}, {{Glossary("number")}}, {{Glossary("bigint")}}, {{Glossary("boolean")}}, {{Glossary("undefined")}}, {{Glossary("symbol")}}, and {{Glossary("null")}}.</p>
 
 <p>Most of the time, a primitive value is represented directly at the lowest level of the language implementation.</p>
 
