--- a/files/en-us/glossary/quality_values/index.html
+++ b/files/en-us/glossary/quality_values/index.html
@@ -5,7 +5,9 @@ tags:
   - Glossary
   - WebMechanics
 ---
-<p><span class="seoSummary"><strong>Quality values</strong>, or <em>q-values</em> and <em>q-factors</em>, are used to describe the order of priority of values in a comma-separated list. It is a special syntax allowed in some <a href="/en-US/docs/Web/HTTP/Headers">HTTP headers</a> and in HTML.</span> The importance of a value is marked by the suffix <code>';q='</code> immediately followed by a value between <code>0</code> and <code>1</code> included, with up to three decimal digits, the highest value denoting the highest priority. When not present, the default value is <code>1</code>.</p>
+<p><strong>Quality values</strong>, or <em>q-values</em> and <em>q-factors</em>, are used to describe the order of priority of values in a comma-separated list. It is a special syntax allowed in some <a href="/en-US/docs/Web/HTTP/Headers">HTTP headers</a> and in HTML.</p>
+
+<p>The importance of a value is marked by the suffix <code>';q='</code> immediately followed by a value between <code>0</code> and <code>1</code> included, with up to three decimal digits, the highest value denoting the highest priority. When not present, the default value is <code>1</code>.</p>
 
 <h2 id="Examples">Examples</h2>
 
