--- a/files/en-us/glossary/rtl/index.html
+++ b/files/en-us/glossary/rtl/index.html
@@ -6,7 +6,9 @@ tags:
   - Glossary
   - Localization
 ---
-<p><span class="seoSummary"><strong>RTL</strong> (<strong>Right To Left</strong>) is a {{Glossary("locale")}} property indicating that text is written from right to left.</span> For example, the <code>he</code> locale (for Hebrew) specifies right-to-left. Arabic (<code>ar</code>) is another common language written RTL.</p>
+<p><strong>RTL</strong> (<strong>Right To Left</strong>) is a {{Glossary("locale")}} property indicating that text is written from right to left.</p>
+
+<p>For example, the <code>he</code> locale (for Hebrew) specifies right-to-left. Arabic (<code>ar</code>) is another common language written RTL.</p>
 
 <p>The opposite of RTL, LTR (Left To Right) is used in other languages, including English (<code>en</code>, <code>en-US</code>, <code>en-GB</code>, etc.), Spanish (<code>es</code>), and French (<code>fr</code>).</p>
 
