--- a/files/en-us/glossary/smpte/index.html
+++ b/files/en-us/glossary/smpte/index.html
@@ -11,4 +11,6 @@ tags:
   - Television
   - standards
 ---
-<p><span class="seoSummary">The <strong>Society of Motion Picture and Television Engineers</strong> (<strong><a href="https://www.smpte.org/">SMPTE</a></strong>) is the professional association of engineers and scientists that develop and define standards and technologies used to create, broadcast, store, and present entertainment media.</span> For example, SMPTE defines the standards used for digital cinema used by modern digital movie theaters.</p>
+<p>The <strong>Society of Motion Picture and Television Engineers</strong> (<strong><a href="https://www.smpte.org/">SMPTE</a></strong>) is the professional association of engineers and scientists that develop and define standards and technologies used to create, broadcast, store, and present entertainment media.</p>
+
+<p>For example, SMPTE defines the standards used for digital cinema used by modern digital movie theaters.</p>
