--- a/files/en-us/glossary/speed_index/index.html
+++ b/files/en-us/glossary/speed_index/index.html
@@ -7,7 +7,7 @@ tags:
   - Reference
   - Web Performance
 ---
-<p><span class="seoSummary"><strong>Speed Index </strong>(SI) is a page load performance metric that shows you how quickly the contents of a page are visibly populated. <span class="ILfuVd">It is the average time at which visible parts of the page are displayed. Expressed in milliseconds, and dependent on the size of the viewport, t</span>he lower the score, the better.</span></p>
+<p><strong>Speed Index</strong> (SI) is a page load performance metric that shows you how quickly the contents of a page are visibly populated. It is the average time at which visible parts of the page are displayed. Expressed in milliseconds, and dependent on the size of the viewport, the lower the score, the better.</p>
 
 <p><img alt="Calculation of SpeedIndex" src="speedindex.png"></p>
 
