--- a/files/en-us/glossary/ttl/index.html
+++ b/files/en-us/glossary/ttl/index.html
@@ -9,12 +9,7 @@ tags:
   - Networking
   - Performance
 ---
-<p><span class="seoSummary"><abbr title="Time To Live">TTL</abbr> can refer either to : </span></p>
-
-<ul>
- <li><span class="seoSummary">the lifetime of a packet in a network can do before being released</span></li>
- <li><span class="seoSummary">the expiry time of cached data</span></li>
-</ul>
+<p>Time To Live (TTL) can refer to either the lifetime of a packet in a network, or the expiry time of cached data.</p>
 
 <h2 id="Networking">Networking</h2>
 
