--- a/files/en-us/glossary/undefined/index.html
+++ b/files/en-us/glossary/undefined/index.html
@@ -7,7 +7,7 @@ tags:
   - JavaScript
   - NeedsContent
 ---
-<p><span class="seoSummary"><strong><code>undefined</code></strong> is a {{Glossary("primitive")}} value automatically assigned to {{glossary("variable", "variables")}} that have just been declared, or to formal {{Glossary("Argument","arguments")}} for which there are no actual arguments.</span></p>
+<p><strong><code>undefined</code></strong> is a {{Glossary("primitive")}} value automatically assigned to {{glossary("variable", "variables")}} that have just been declared, or to formal {{Glossary("Argument","arguments")}} for which there are no actual arguments.</p>
 
 <h2 id="Example">Example</h2>
 
