--- a/files/en-us/glossary/unicode/index.html
+++ b/files/en-us/glossary/unicode/index.html
@@ -4,7 +4,9 @@ slug: Glossary/Unicode
 tags:
   - Infrastructure
 ---
-<p><span class="seoSummary">Unicode is a standard {{Glossary("Character set","character set")}} that numbers and defines {{Glossary("Character","characters")}} from the world's different languages, writing systems, and symbols.</span> By assigning each character a number, programmers can create {{Glossary("Character encoding","character encodings")}}, to let computers store, process, and transmit any combination of languages in the same file or program.</p>
+<p>Unicode is a standard {{Glossary("Character set","character set")}} that numbers and defines {{Glossary("Character","characters")}} from the world's different languages, writing systems, and symbols.</p>
+
+<p>By assigning each character a number, programmers can create {{Glossary("Character encoding","character encodings")}}, to let computers store, process, and transmit any combination of languages in the same file or program.</p>
 
 <p>Before Unicode, it was difficult and error-prone to mix languages in the same data. For example, one character set would store Japanese characters, and another would store the Arabic alphabet. If it was not clearly marked which parts of the data were in which character set, other programs and computers would display the text incorrectly, or damage it during processing. If you've ever seen text where characters like curly quotes (<code>“”</code>) were replaced with gibberish like <code>Ã‚Â£</code>, then you've seen this problem, known as {{Interwiki("wikipedia", "Mojibake")}}.</p>
 
