--- a/files/en-us/glossary/webrtc/index.html
+++ b/files/en-us/glossary/webrtc/index.html
@@ -11,7 +11,7 @@ tags:
   - Web
   - WebRTC
 ---
-<p><span class="seoSummary"><strong>WebRTC</strong> (<em>Web Real-Time Communication</em>) is an {{Glossary("API")}} that can be used by video-chat, voice-calling, and P2P-file-sharing Web apps.</span></p>
+<p><strong>WebRTC</strong> (<em>Web Real-Time Communication</em>) is an {{Glossary("API")}} that can be used by video-chat, voice-calling, and P2P-file-sharing Web apps.</p>
 
 <p>WebRTC consists mainly of these parts:</p>
 
