--- a/files/en-us/glossary/ietf/index.html
+++ b/files/en-us/glossary/ietf/index.html
@@ -7,7 +7,9 @@ tags:
   - Infrastructure
   - Internet
 ---
-<p><span class="seoSummary">The Internet Engineering Task Force (<strong>IETF</strong>) is a worldwide organization that drafts {{glossary('specification','specifications')}} governing the mechanisms behind the {{glossary("Internet")}}, especially the {{glossary("TCP")}}/{{glossary("IPv6","IP")}} or Internet {{glossary("Protocol")}} Suite.</span> The IETF is open, run by volunteers, and sponsored by the <a href="https://www.internetsociety.org/">Internet Society</a>. </p>
+<p>The Internet Engineering Task Force (<strong>IETF</strong>) is a worldwide organization that drafts {{glossary('specification','specifications')}} governing the mechanisms behind the {{glossary("Internet")}}, especially the {{glossary("TCP")}}/{{glossary("IPv6","IP")}} or Internet {{glossary("Protocol")}} Suite.</p>
+
+<p>The IETF is open, run by volunteers, and sponsored by the <a href="https://www.internetsociety.org/">Internet Society</a>.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
