--- a/files/en-us/glossary/key/index.html
+++ b/files/en-us/glossary/key/index.html
@@ -6,7 +6,9 @@ tags:
   - Glossary
   - Security
 ---
-<p><span class="seoSummary">A key is a piece of information used by a {{Glossary("cipher")}} for {{Glossary("encryption")}} and/or {{Glossary("decryption")}}.</span> Encrypted messages should remain secure even if everything about the {{Glossary("cryptosystem")}}, except for the key, is public knowledge.</p>
+<p>A key is a piece of information used by a {{Glossary("cipher")}} for {{Glossary("encryption")}} and/or {{Glossary("decryption")}}.</p>
+
+<p>Encrypted messages should remain secure even if everything about the {{Glossary("cryptosystem")}}, except for the key, is public knowledge.</p>
 
 <p>In {{Glossary("symmetric-key cryptography")}}, the same key is used for both encryption and decryption. In {{Glossary("public-key cryptography")}}, there exists a pair of related keys known as the <em>public key</em> and <em>private key</em>. The public key is freely available, whereas the private key is kept secret. The public key is able to encrypt messages that only the corresponding private key is able to decrypt, and vice versa.</p>
 
