--- a/files/en-us/glossary/long_task/index.html
+++ b/files/en-us/glossary/long_task/index.html
@@ -7,7 +7,9 @@ tags:
   - Reference
   - Web Performance
 ---
-<p><span class="seoSummary">A <strong>long task</strong>  is a task that takes more than 50ms to complete.</span> It is an uninterrupted period where the <a href="/en-US/docs/Glossary/Main_thread">main UI thread</a> is busy for 50 ms or longer. Common examples include long running event handlers, expensive <a href="/en-US/docs/Glossary/Reflow">reflows</a> and other re-renders, and work the browser does between different turns of the event loop that exceeds 50 ms.</p>
+<p>A <strong>long task</strong>  is a task that takes more than 50ms to complete.</p>
+
+<p>It is an uninterrupted period where the <a href="/en-US/docs/Glossary/Main_thread">main UI thread</a> is busy for 50 ms or longer. Common examples include long running event handlers, expensive <a href="/en-US/docs/Glossary/Reflow">reflows</a> and other re-renders, and work the browser does between different turns of the event loop that exceeds 50 ms.</p>
 
 <h2 id="See_also">See also</h2>
 
