--- a/files/en-us/glossary/minification/index.html
+++ b/files/en-us/glossary/minification/index.html
@@ -7,6 +7,6 @@ tags:
   - Reference
   - Web Performance
 ---
-<p><span class="ILfuVd"><span class="seoSummary"><strong>Minification</strong> is the process of removing unnecessary or redundant data without affecting how a resource is processed by the browser.</span> Minification can include the removal of code comments, white space, and unused code, as well as the shortening of variable and function names. Minification is used to improve web performance by reducing file size. It is generally an automated step that occurs at build time. </span></p>
+<p><span class="seoSummary"><strong>Minification</strong> is the process of removing unnecessary or redundant data without affecting how a resource is processed by the browser.</span> Minification can include the removal of code comments, white space, and unused code, as well as the shortening of variable and function names. Minification is used to improve web performance by reducing file size. It is generally an automated step that occurs at build time.</p>
 
 <p><span class="ILfuVd">As minification makes code less legible to humans, developer tools have 'prettification' features that can add white space back into the code to make it a bit more legible.</span></p>
