--- a/files/en-us/glossary/opengl/index.html
+++ b/files/en-us/glossary/opengl/index.html
@@ -6,7 +6,7 @@ tags:
   - Glossary
   - OpenGL
 ---
-<p><span class="seoSummary"><strong>OpenGL</strong> (<strong>Open Graphics Library</strong>)<sup><a href="https://en.wikipedia.org/wiki/OpenGL#cite_note-3"> </a></sup>is a cross-language, multi-platform application programming interface (API) for rendering 2D and 3D vector graphics. The API is typically used to interact with a graphics processing unit (GPU), to achieve hardware-accelerated rendering.</span></p>
+<p><strong>OpenGL</strong> (<strong>Open Graphics Library</strong>)<sup><a href="https://en.wikipedia.org/wiki/OpenGL#cite_note-3"> </a></sup>is a cross-language, multi-platform application programming interface (API) for rendering 2D and 3D vector graphics. The API is typically used to interact with a graphics processing unit (GPU), to achieve hardware-accelerated rendering.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
