--- a/files/en-us/glossary/plaintext/index.html
+++ b/files/en-us/glossary/plaintext/index.html
@@ -6,6 +6,6 @@ tags:
   - Glossary
   - Security
 ---
-<p><span class="seoSummary">Plaintext refers to information that is being used as an input to an {{Glossary("encryption")}} {{Glossary("algorithm")}}, or to {{Glossary("ciphertext")}} that has been decrypted.</span></p>
+<p>Plaintext refers to information that is being used as an input to an {{Glossary("encryption")}} {{Glossary("algorithm")}}, or to {{Glossary("ciphertext")}} that has been decrypted.</p>
 
 <p>It is frequently used interchangeably with the term <em>cleartext</em>, which more loosely refers to any information, such as a text document, image, etc., that has not been encrypted and can be read by a human or computer without additional processing.</p>
