--- a/files/en-us/glossary/prefetch/index.html
+++ b/files/en-us/glossary/prefetch/index.html
@@ -7,7 +7,7 @@ tags:
   - Reference
   - Web Performance
 ---
-<p><span class="seoSummary">Prefetching is when content is downloaded in the background, this is based on the assumption that the content will likely be requested, enabling the content to load instantly if and when the user requests it. The content is downloaded and cached for anticipated future use without the user making an explicit request for it.</span></p>
+<p>Prefetching is when content is downloaded in the background, this is based on the assumption that the content will likely be requested, enabling the content to load instantly if and when the user requests it. The content is downloaded and cached for anticipated future use without the user making an explicit request for it.</p>
 
 <h3 id="DNS_Prefetching">DNS Prefetching</h3>
 
