--- a/files/en-us/glossary/quaternion/index.html
+++ b/files/en-us/glossary/quaternion/index.html
@@ -9,7 +9,9 @@ tags:
   - WebXR
   - rotation
 ---
-<p><span class="seoSummary">A <strong>quaternion</strong> is the quotient of two 3D vectors and is used in 3D graphics and in accelerometer-based sensors to represent orientation or rotational data.</span> While mathematical quaternions are more involved than this, the <strong>unit quaternions</strong> (or <strong>rotational quaternions</strong>) used to represent rotation while using <a href="/en-US/docs/Glossary/WebGL">WebGL</a> or <a href="/en-US/docs/Web/API/WebXR_Device_API">WebXR</a>, for example, are represented using the same syntax as a 3D point. As such, the type {{domxref("DOMPoint")}} (or {{domxref("DOMPointReadOnly")}}) is used to store quaternions.</p>
+<p>A <strong>quaternion</strong> is the quotient of two 3D vectors and is used in 3D graphics and in accelerometer-based sensors to represent orientation or rotational data.</p>
+
+<p>While mathematical quaternions are more involved than this, the <strong>unit quaternions</strong> (or <strong>rotational quaternions</strong>) used to represent rotation while using <a href="/en-US/docs/Glossary/WebGL">WebGL</a> or <a href="/en-US/docs/Web/API/WebXR_Device_API">WebXR</a>, for example, are represented using the same syntax as a 3D point. As such, the type {{domxref("DOMPoint")}} (or {{domxref("DOMPointReadOnly")}}) is used to store quaternions.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
