--- a/files/en-us/glossary/quic/index.html
+++ b/files/en-us/glossary/quic/index.html
@@ -8,7 +8,9 @@ tags:
   - Reference
   - Web Performance
 ---
-<p><span class="seoSummary"><strong>Quick UDP Internet Connection</strong>, or <strong>QUIC</strong>,  is an experimental multiplexed transport protocol implemented on UDP.  It was developed by Google as a way to experiment with ways to improve TCP and web application delivery. </span> As TCP is built into the kernel of many operating systems being able to experiment with changes, test them and implement modifications is an extremely slow process. The creation of QUIC allows developers to conduct experiments and try new things faster.</p>
+<p><strong>Quick UDP Internet Connection</strong>, or <strong>QUIC</strong>, is an experimental multiplexed transport protocol implemented on UDP. It was developed by Google as a way to experiment with ways to improve TCP and web application delivery.</p>
+
+<p>As TCP is built into the kernel of many operating systems being able to experiment with changes, test them and implement modifications is an extremely slow process. The creation of QUIC allows developers to conduct experiments and try new things faster.</p>
 
 <p>QUIC was designed to support the semantics of HTTP/2. It provides multiplexing, flow control, security and congestion control.</p>
 
