--- a/files/en-us/glossary/rtcp/index.html
+++ b/files/en-us/glossary/rtcp/index.html
@@ -9,7 +9,9 @@ tags:
   - RTCP
   - control
 ---
-<p><span class="seoSummary">The <strong>RTP Control Protocol</strong> (<strong>RTCP</strong>) is a partner to the {{Glossary("RTP")}} protocol. RTCP is used to provide control and statistical information about an RTP media streaming session.</span> This lets control and statistics packets be separated logically and functionally from the media streaming while using the underlying packet delivery layer to transmit the RTCP signals as well as the RTP and media contents.</p>
+<p>The <strong>RTP Control Protocol</strong> (<strong>RTCP</strong>) is a partner to the {{Glossary("RTP")}} protocol. RTCP is used to provide control and statistical information about an RTP media streaming session.</p>
+
+<p>This lets control and statistics packets be separated logically and functionally from the media streaming while using the underlying packet delivery layer to transmit the RTCP signals as well as the RTP and media contents.</p>
 
 <p>RTCP periodically transmits control packets to all of an RTP session's participants, using the same mechanism that is being used to transmit the data packets. That underlying protocol handles the multiplexing of the data and control packets and may use separate network ports for each type of packet.</p>
 
