--- a/files/en-us/glossary/script-supporting_element/index.html
+++ b/files/en-us/glossary/script-supporting_element/index.html
@@ -7,7 +7,9 @@ tags:
   - HTML Content Categories
   - scripts
 ---
-<p><span class="seoSummary">In an {{Glossary("HTML")}} document, <strong>script-supporting elements</strong> are those elements that don't directly contribute to the appearance or layout of the page; instead, they're either scripts or contain information that's only used by scripts.</span> These elements may be important, but do not affect the displayed page unless the page's scripts explicitly cause them to do so.</p>
+<p>In an {{Glossary("HTML")}} document, <strong>script-supporting elements</strong> are those elements that don't directly contribute to the appearance or layout of the page; instead, they're either scripts or contain information that's only used by scripts.</p>
+
+<p>These elements may be important, but do not affect the displayed page unless the page's scripts explicitly cause them to do so.</p>
 
 <p>There are only two script-supporting elements: {{HTMLElement("script")}} and {{HTMLElement("template")}}.</p>
 
