--- a/files/en-us/glossary/server_timing/index.html
+++ b/files/en-us/glossary/server_timing/index.html
@@ -7,7 +7,7 @@ tags:
   - Server Timing
   - Web Performance
 ---
-<p><span class="seoSummary">The <a href="https://www.w3.org/TR/server-timing/" rel="noopener noreferrer">Server Timing specification</a> enables the server to communicate performance metrics from the request-response cycle to the user agent, and utilizes a JavaScript interface to allow applications to collect, process, and act on these metrics to optimize application delivery.</span></p>
+<p>The <a href="https://www.w3.org/TR/server-timing/" rel="noopener noreferrer">Server Timing specification</a> enables the server to communicate performance metrics from the request-response cycle to the user agent, and utilizes a JavaScript interface to allow applications to collect, process, and act on these metrics to optimize application delivery.</p>
 
 <h2 id="See_also">See also</h2>
 
