--- a/files/en-us/glossary/slug/index.html
+++ b/files/en-us/glossary/slug/index.html
@@ -9,7 +9,7 @@ tags:
   - URL
   - Web
 ---
-<p><span class="seoSummary">A Slug is the unique identifying part of a web address, typically at the end of the URL. In the context of MDN, it is the portion of the URL following "<em>&lt;locale&gt;/docs/</em>".</span></p>
+<p>A Slug is the unique identifying part of a web address, typically at the end of the URL. In the context of MDN, it is the portion of the URL following "<em>&lt;locale&gt;/docs/</em>".</p>
 
 <p>It may also just be the final component when a new document is created under a parent document; for example, this page's slug is <code>Glossary/Slug</code> .</p>
 
