--- a/files/en-us/glossary/synthetic_monitoring/index.html
+++ b/files/en-us/glossary/synthetic_monitoring/index.html
@@ -8,7 +8,9 @@ tags:
   - Synthetic monitoring
   - Web Performance
 ---
-<p><span class="seoSummary"><strong>Synthetic monitoring</strong> involves monitoring the performance of a page in a 'laboratory' environment, typically with automation tooling in an environment that is as consistent as possible.</span> With a consistent baseline, synthetic monitoring is good for measuring the effects of code changes on performance. However, it doesn't necessarily reflect what users are experiencing.</p>
+<p><strong>Synthetic monitoring</strong> involves monitoring the performance of a page in a 'laboratory' environment, typically with automation tooling in an environment that is as consistent as possible.</p>
+
+<p>With a consistent baseline, synthetic monitoring is good for measuring the effects of code changes on performance. However, it doesn't necessarily reflect what users are experiencing.</p>
 
 <p>Synthetic Monitoring involves deploying scripts to simulate the path an end-user might take through a web application, reporting back the performance of the simulator experiences. Examples of popular synthetic monitoring tools include <a href="https://webpagetest.org">WebPageTest</a> and <a href="https://developers.google.com/web/tools/lighthouse/">Lighthouse</a>. The traffic measured is not of your actual users, but rather synthetically generated traffic collecting data on page performance.</p>
 
