--- a/files/en-us/glossary/table_grid_box/index.html
+++ b/files/en-us/glossary/table_grid_box/index.html
@@ -6,4 +6,4 @@ tags:
   - CSS
   - Tables
 ---
-<p><span class="seoSummary">The <strong>Table Grid Box</strong> is a block level box which contains all of the table internal boxes, excluding the caption. The box which includes the caption is referred to as the <a href="/en-US/docs/Glossary/Table_Wrapper_Box">Table Wrapper Box</a>.</span></p>
+<p>The <strong>Table Grid Box</strong> is a block level box which contains all of the table internal boxes, excluding the caption. The box which includes the caption is referred to as the <a href="/en-US/docs/Glossary/Table_Wrapper_Box">Table Wrapper Box</a>.</p>
