--- a/files/en-us/glossary/table_wrapper_box/index.html
+++ b/files/en-us/glossary/table_wrapper_box/index.html
@@ -6,4 +6,4 @@ tags:
   - CSS
   - Tables
 ---
-<p><span class="seoSummary">The <strong>Table Wrapper Box</strong> is the box generated around <a href="/en-US/docs/Glossary/Table_Grid_Box">table grid boxes</a> which accounts for the space needed for any caption displayed for the table. This box will become the containing block for absolutely positioned items where the table is the containing block.</span></p>
+<p>The <strong>Table Wrapper Box</strong> is the box generated around <a href="/en-US/docs/Glossary/Table_Grid_Box">table grid boxes</a> which accounts for the space needed for any caption displayed for the table. This box will become the containing block for absolutely positioned items where the table is the containing block.</p>
