--- a/files/en-us/glossary/uri/index.html
+++ b/files/en-us/glossary/uri/index.html
@@ -8,7 +8,9 @@ tags:
   - URI
   - URL
 ---
-<p><span class="seoSummary">A <strong>URI</strong><em> (Uniform Resource Identifier)</em> is a string that refers to a resource.</span> The most common are {{Glossary("URL","URL")}}s, which identify the resource by giving its location on the Web. {{Glossary("URN","URN")}}s, by contrast, refer to a resource by a name, in a given namespace, such as the ISBN of a book.</p>
+<p>A <strong>URI</strong><em> (Uniform Resource Identifier)</em> is a string that refers to a resource.</p>
+
+<p>The most common are {{Glossary("URL","URL")}}s, which identify the resource by giving its location on the Web. {{Glossary("URN","URN")}}s, by contrast, refer to a resource by a name, in a given namespace, such as the ISBN of a book.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
