--- a/files/en-us/glossary/web_performance/index.html
+++ b/files/en-us/glossary/web_performance/index.html
@@ -7,7 +7,9 @@ tags:
   - Reference
   - Web Performance
 ---
-<p><span class="seoSummary"><strong>Web performance</strong> is the objective time from when a request for content is made until the requested content is displayed in the user's browser, objective render times, and the subjective user experience of load time and runtime.</span> Objectively, it is measurable time, in milliseconds, it takes for the web page or web application to be downloaded, painted in the user's web browser, and become responsive and interactive. It is the frames per second and times the main thread is not available for user interactions. Subjectively, it is the user's perception of whether the time it takes between the time the user requests the content and the time until the user feels the content requested is available and usable <em>feels</em> slow or fast.</p>
+<p><strong>Web performance</strong> is the objective time from when a request for content is made until the requested content is displayed in the user's browser, objective render times, and the subjective user experience of load time and runtime.</p>
+
+<p>Objectively, it is measurable time, in milliseconds, it takes for the web page or web application to be downloaded, painted in the user's web browser, and become responsive and interactive. It is the frames per second and times the main thread is not available for user interactions. Subjectively, it is the user's perception of whether the time it takes between the time the user requests the content and the time until the user feels the content requested is available and usable <em>feels</em> slow or fast.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
