--- a/files/en-us/glossary/whitespace/index.html
+++ b/files/en-us/glossary/whitespace/index.html
@@ -6,7 +6,9 @@ tags:
   - Lexical Grammar
   - whitespace
 ---
-<p><span class="seoSummary"><strong>Whitespace</strong> refers to {{Glossary("Character", "characters")}} which are used to provide horizontal or vertical space between other characters. Whitespace is often used to separate tokens in {{Glossary("HTML")}}, {{Glossary("CSS")}}, {{Glossary("JavaScript")}}, and other computer languages.</span> Whitespace characters and their usage vary among languages.</p>
+<p><strong>Whitespace</strong> refers to {{Glossary("Character", "characters")}} which are used to provide horizontal or vertical space between other characters. Whitespace is often used to separate tokens in {{Glossary("HTML")}}, {{Glossary("CSS")}}, {{Glossary("JavaScript")}}, and other computer languages.</p>
+
+<p>Whitespace characters and their usage vary among languages.</p>
 
 <h2 id="In_HTML">In HTML</h2>
 
