--- a/files/en-us/glossary/xhtml/index.html
+++ b/files/en-us/glossary/xhtml/index.html
@@ -6,7 +6,7 @@ tags:
   - Glossary
   - XHTML
 ---
-<p><span class="seoSummary"><strong>XHTML</strong> is a term that was historically used to describe HTML documents written to conform with {{Glossary("XML")}} syntax rules.</span></p>
+<p><strong>XHTML</strong> is a term that was historically used to describe HTML documents written to conform with {{Glossary("XML")}} syntax rules.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
