Glossary: remove id/class of summary

--- a/files/en-us/glossary/adobe_flash/index.html
+++ b/files/en-us/glossary/adobe_flash/index.html
@@ -8,7 +8,7 @@ tags:
   - Glossary
   - Infrastructure
 ---
-<p id="Summary">Flash is a deprecated technology developed by Adobe for viewing expressive web applications, multimedia content, and streaming media. Adobe Flash can run from supporting {{Glossary("Browser","web browsers")}} via a browser plug-in.</p>
+<p>Flash is a deprecated technology developed by Adobe for viewing expressive web applications, multimedia content, and streaming media. Adobe Flash can run from supporting {{Glossary("Browser","web browsers")}} via a browser plug-in.</p>
 
 <section id="Quick_links">
 <ol>
