--- a/files/en-us/glossary/endianness/index.html
+++ b/files/en-us/glossary/endianness/index.html
@@ -6,7 +6,7 @@ tags:
   - CodingScripting
   - Glossary
 ---
-<p id="Summary"><strong>Endian</strong> and <strong>endianness</strong> (or "byte-order") describe how computers organize the bytes that make up numbers.</p>
+<p><strong>Endian</strong> and <strong>endianness</strong> (or "byte-order") describe how computers organize the bytes that make up numbers.</p>
 
 <p>Each memory storage location has an index or address. Every byte can store an 8-bit number (i.e. between <code>0x00</code> and <code>0xff</code>), so you must reserve more than one byte to store a larger number. By far the most common <em>ordering</em> of multiple bytes in one number is the <strong>little-endian</strong>, which is used on all Intel processors. Little-endian means storing bytes in order of least-to-most-significant (where the least significant byte takes the first or lowest address), comparable to a common European way of writing dates (e.g., 31 December 2050).</p>
 
