--- a/files/en-us/glossary/falsy/index.html
+++ b/files/en-us/glossary/falsy/index.html
@@ -6,7 +6,7 @@ tags:
   - Glossary
   - JavaScript
 ---
-<p id="Summary">A <strong>falsy</strong> (sometimes written <strong>falsey</strong>) value is a value that is considered false when encountered in a {{Glossary("Boolean")}} context.</p>
+<p>A <strong>falsy</strong> (sometimes written <strong>falsey</strong>) value is a value that is considered false when encountered in a {{Glossary("Boolean")}} context.</p>
 
 <p>{{Glossary("JavaScript")}} uses {{Glossary("Type_Conversion", "type conversion")}} to coerce any value to a Boolean in contexts that require it, such as {{Glossary("Conditional", "conditionals")}} and {{Glossary("Loop", "loops")}}.</p>
 
