--- a/files/en-us/glossary/firefox_os/index.html
+++ b/files/en-us/glossary/firefox_os/index.html
@@ -9,4 +9,4 @@ tags:
   - Infrastructure
   - Intro
 ---
-<p id="Summary">Firefox OS is a discontinued open source mobile operating system developed by Mozilla. See {{interwiki("wikipedia", "Firefox OS")}} for more details.</p>
+<p>Firefox OS is a discontinued open source mobile operating system developed by Mozilla. See {{interwiki("wikipedia", "Firefox OS")}} for more details.</p>
