--- a/files/en-us/glossary/ftu/index.html
+++ b/files/en-us/glossary/ftu/index.html
@@ -10,6 +10,6 @@ tags:
   - Infrastructure
   - Intro
 ---
-<p id="Summary">FTU (First Time Use) is the app that loads when you run a newly-installed version of {{glossary("Gecko")}} on a {{glossary("Firefox OS")}} device.</p>
+<p>FTU (First Time Use) is the app that loads when you run a newly-installed version of {{glossary("Gecko")}} on a {{glossary("Firefox OS")}} device.</p>
 
 <p>You can use FTU to set many important options (e.g. timezone, WiFi details, default language, importing contacts), or take the "Phone Tour" to find out more about your device.</p>
