--- a/files/en-us/glossary/ipv6/index.html
+++ b/files/en-us/glossary/ipv6/index.html
@@ -9,7 +9,7 @@ tags:
   - Web
   - WebMechanics
 ---
-<p id="Summary"><strong>IPv6</strong> is the current version of the communication {{glossary("protocol")}} underlying the {{glossary("Internet")}}. Slowly IPv6 is replacing {{Glossary("IPv4")}}, among other reasons because IPv6 allows for many different {{Glossary("IP address","IP addresses")}}.</p>
+<p><strong>IPv6</strong> is the current version of the communication {{glossary("protocol")}} underlying the {{glossary("Internet")}}. Slowly IPv6 is replacing {{Glossary("IPv4")}}, among other reasons because IPv6 allows for many different {{Glossary("IP address","IP addresses")}}.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
