--- a/files/en-us/glossary/protocol/index.html
+++ b/files/en-us/glossary/protocol/index.html
@@ -6,7 +6,7 @@ tags:
   - Infrastructure
   - Protocols
 ---
-<p id="Summary">A <strong>protocol</strong> is a system of rules that define how data is exchanged within or between computers. Communications between devices require that the devices agree on the format of the data that is being exchanged. The set of rules that defines a format is called a protocol.</p>
+<p>A <strong>protocol</strong> is a system of rules that define how data is exchanged within or between computers. Communications between devices require that the devices agree on the format of the data that is being exchanged. The set of rules that defines a format is called a protocol.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
