--- a/files/en-us/glossary/smoke_test/index.html
+++ b/files/en-us/glossary/smoke_test/index.html
@@ -8,7 +8,7 @@ tags:
   - QA
   - Testing
 ---
-<p id="Summary">A smoke test consists of functional or unit tests of critical software functionality. Smoke testing comes before further, in-depth testing.</p>
+<p>A smoke test consists of functional or unit tests of critical software functionality. Smoke testing comes before further, in-depth testing.</p>
 
 <p>Smoke testing answers questions like</p>
 
