--- a/files/en-us/glossary/string/index.html
+++ b/files/en-us/glossary/string/index.html
@@ -7,7 +7,7 @@ tags:
   - Glossary
   - String
 ---
-<p id="Summary">In any computer programming language, a string is a sequence of {{Glossary("character","characters")}} used to represent text.</p>
+<p>In any computer programming language, a string is a sequence of {{Glossary("character","characters")}} used to represent text.</p>
 
 <p>In {{Glossary("JavaScript")}}, a String is one of the {{Glossary("Primitive", "primitive values")}} and the {{jsxref("String")}} object is a {{Glossary("wrapper")}} around a String primitive.</p>
 
