--- a/files/en-us/glossary/validator/index.html
+++ b/files/en-us/glossary/validator/index.html
@@ -6,7 +6,7 @@ tags:
   - Glossary
   - Security
 ---
-<p id="Summary">A validator is a program that checks for syntax errors in code. Validators can be created for any format or language, but in our context we speak of tools that check {{Glossary("HTML")}}, {{Glossary("CSS")}}, and {{Glossary("XML")}}.</p>
+<p>A validator is a program that checks for syntax errors in code. Validators can be created for any format or language, but in our context we speak of tools that check {{Glossary("HTML")}}, {{Glossary("CSS")}}, and {{Glossary("XML")}}.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
