--- a/files/en-us/glossary/application_context/index.html
+++ b/files/en-us/glossary/application_context/index.html
@@ -5,7 +5,7 @@ tags:
   - CodingScripting
   - Glossary
 ---
-<p id="Summary">An <strong>application context</strong> is a top-level <a href="/en-US/docs/Glossary/Browsing_context">browsing context</a> that has a <a href="/en-US/docs/Web/Manifest">manifest</a> applied to it. </p>
+<p>An <strong>application context</strong> is a top-level <a href="/en-US/docs/Glossary/Browsing_context">browsing context</a> that has a <a href="/en-US/docs/Web/Manifest">manifest</a> applied to it. </p>
 
 <p>If an application context is created as a result of the user agent being asked to navigate to a deep link, the user agent must immediately navigate to the deep link with replacement enabled. Otherwise, when the application context is created, the user agent must immediately navigate to the start URL with replacement enabled.</p>
 
