--- a/files/en-us/glossary/distributed_denial_of_service/index.html
+++ b/files/en-us/glossary/distributed_denial_of_service/index.html
@@ -9,7 +9,7 @@ tags:
   - Intro
   - Security
 ---
-<p id="Summary">A Distributed Denial-of-Service (DDoS) is an attack in which many compromised systems are made to attack a single target, in order to swamp server resources and block legitimate users.</p>
+<p>A Distributed Denial-of-Service (DDoS) is an attack in which many compromised systems are made to attack a single target, in order to swamp server resources and block legitimate users.</p>
 
 <p>Normally many persons, using many bots, attack high-profile Web {{glossary("server","servers")}} like banks or credit-card payment gateways. DDoS concerns computer networks and CPU resource management.</p>
 
