--- a/files/en-us/glossary/dos_attack/index.html
+++ b/files/en-us/glossary/dos_attack/index.html
@@ -5,7 +5,7 @@ tags:
   - Glossary
   - Security
 ---
-<p id="Summary">DoS (Denial of Service) is a network attack that prevents legitimate use of {{glossary("server")}} resources by flooding the server with requests.</p>
+<p>DoS (Denial of Service) is a network attack that prevents legitimate use of {{glossary("server")}} resources by flooding the server with requests.</p>
 
 <p id="In_Depth">Computers have limited resources, for example computation power or memory. When these are exhausted, the program can freeze or crash, making it unavailable. A DoS attack consists of various techniques to exhaust these resources and make a server or a network unavailable to legitimate users, or at least make the server perform sluggishly.</p>
 
