--- a/files/en-us/glossary/exception/index.html
+++ b/files/en-us/glossary/exception/index.html
@@ -6,7 +6,7 @@ tags:
   - CodingScripting
   - Glossary
 ---
-<p id="Summary">An <strong>exception</strong> is a condition that interrupts normal code execution. In JavaScript {{glossary("syntax error", "syntax errors")}} are a very common source of exceptions.</p>
+<p>An <strong>exception</strong> is a condition that interrupts normal code execution. In JavaScript {{glossary("syntax error", "syntax errors")}} are a very common source of exceptions.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
