--- a/files/en-us/glossary/locale/index.html
+++ b/files/en-us/glossary/locale/index.html
@@ -6,7 +6,7 @@ tags:
   - Glossary
   - Locale
 ---
-<p id="Summary"><strong>Locale</strong> is a set of language- or country-based preferences for a user interface.</p>
+<p><strong>Locale</strong> is a set of language- or country-based preferences for a user interface.</p>
 
 <p>A program draws its locale settings from the language of the host system. Among other things, locales represent paper format, currency, date format, and numbers according to the protocols in the given region.</p>
 
