--- a/files/en-us/glossary/mathml/index.html
+++ b/files/en-us/glossary/mathml/index.html
@@ -8,7 +8,7 @@ tags:
   - Mathematical Markup Language
   - XML
 ---
-<p id="Summary"><strong>MathML </strong>(an {{glossary("XML")}} application) is an open standard for representing mathematical expressions in webpages.  In 1998 the W3C first recommended MathML for representing mathematical expressions in the {{glossary("browser")}}. MathML has other applications also including scientific content and voice synthesis.</p>
+<p><strong>MathML </strong>(an {{glossary("XML")}} application) is an open standard for representing mathematical expressions in webpages.  In 1998 the W3C first recommended MathML for representing mathematical expressions in the {{glossary("browser")}}. MathML has other applications also including scientific content and voice synthesis.</p>
 
 <section id="Quick_links">
 <ol>
