--- a/files/en-us/glossary/opera_browser/index.html
+++ b/files/en-us/glossary/opera_browser/index.html
@@ -8,7 +8,7 @@ tags:
   - Opera
   - Opera Browser
 ---
-<p id="Summary"><strong>Opera</strong> is the fifth most used web {{glossary("browser")}}, publicly released in 1996 and initially running on Windows only. Opera uses {{glossary("Blink")}} as its layout engine since 2013 (before that, {{glossary("Presto")}}). Opera also exists in mobile and tablet versions.</p>
+<p><strong>Opera</strong> is the fifth most used web {{glossary("browser")}}, publicly released in 1996 and initially running on Windows only. Opera uses {{glossary("Blink")}} as its layout engine since 2013 (before that, {{glossary("Presto")}}). Opera also exists in mobile and tablet versions.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
