--- a/files/en-us/glossary/repo/index.html
+++ b/files/en-us/glossary/repo/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{QuickLinksWithSubpages("/en-US/docs/Glossary")}}</div>
 
-<p class="summary"><span class="seoSummary">In a revision control system like {{Glossary("Git")}} or {{Glossary("SVN")}}, a repo (i.e. "repository") is a place that hosts an application's code source, together with various metadata.</span></p>
+<p>In a revision control system like {{Glossary("Git")}} or {{Glossary("SVN")}}, a repo (i.e. "repository") is a place that hosts an application's code source, together with various metadata.</p>
 
 <h2 id="Learn_more">Learn more</h2>
 
